[gd_scene load_steps=75 format=3 uid="uid://dl03gx0p4nru6"]

[ext_resource type="Script" path="res://entities/enemies/skeleton/skeleton.gd" id="1_scjn5"]
[ext_resource type="Texture2D" uid="uid://c7mjgj1m4msdg" path="res://assets/sprites/skeleton/attack1.png" id="2_c4jyl"]
[ext_resource type="Texture2D" uid="uid://gk1hb4uccot0" path="res://assets/sprites/skeleton/attack2.png" id="3_55ptc"]
[ext_resource type="Texture2D" uid="uid://cm0tsyuuo5tdw" path="res://assets/sprites/skeleton/attack3.png" id="4_wtjnl"]
[ext_resource type="Texture2D" uid="uid://ci3aj7pcsvbmf" path="res://assets/sprites/skeleton/damage.png" id="5_lrr08"]
[ext_resource type="Texture2D" uid="uid://bmxcsafbww780" path="res://assets/sprites/skeleton/death.png" id="6_n26ej"]
[ext_resource type="Texture2D" uid="uid://cj15wm8b87it2" path="res://assets/sprites/skeleton/idle.png" id="7_0ry2l"]
[ext_resource type="Texture2D" uid="uid://cncew50i1r5dq" path="res://assets/sprites/skeleton/shield.png" id="8_rn4c5"]
[ext_resource type="Texture2D" uid="uid://bw4ktn7mnf6hm" path="res://assets/sprites/skeleton/walk.png" id="9_2pu0v"]
[ext_resource type="Script" path="res://entities/tools/hitbox.gd" id="10_318o1"]
[ext_resource type="Script" path="res://entities/tools/hurtbox.gd" id="11_3grk0"]
[ext_resource type="AnimationLibrary" uid="uid://b65l0ee570q2f" path="res://assets/animations/skeleton.res" id="12_jvxvn"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/idle.gd" id="13_egieu"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/hurt.gd" id="14_fhkn0"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/state_machine.gd" id="14_noadi"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/death.gd" id="15_jtmg2"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/walk.gd" id="15_owcli"]
[ext_resource type="Theme" uid="uid://brlh53bypvlrb" path="res://assets/gui/themes/default.tres" id="16_850ak"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/fall.gd" id="16_kdtjt"]
[ext_resource type="FontFile" uid="uid://dgw8oojx04n8d" path="res://assets/gui/fonts/m3x6.ttf" id="17_4oug7"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/watch.gd" id="19_yluc4"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/attack1.gd" id="20_wlf4c"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/attack2.gd" id="21_0wmv4"]
[ext_resource type="Script" path="res://entities/enemies/skeleton/state_machine/chase.gd" id="21_rov81"]
[ext_resource type="Script" path="res://entities/enemies/health.gd" id="26_yywjc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tfqcu"]
atlas = ExtResource("2_c4jyl")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsm36"]
atlas = ExtResource("2_c4jyl")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h8o1"]
atlas = ExtResource("2_c4jyl")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_livdb"]
atlas = ExtResource("2_c4jyl")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1x5e"]
atlas = ExtResource("2_c4jyl")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4yx2"]
atlas = ExtResource("2_c4jyl")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0qe2"]
atlas = ExtResource("2_c4jyl")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybcsg"]
atlas = ExtResource("2_c4jyl")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8byya"]
atlas = ExtResource("3_55ptc")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dntwx"]
atlas = ExtResource("3_55ptc")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eutql"]
atlas = ExtResource("3_55ptc")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wldpp"]
atlas = ExtResource("3_55ptc")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_idokl"]
atlas = ExtResource("3_55ptc")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex8fo"]
atlas = ExtResource("3_55ptc")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8gob"]
atlas = ExtResource("3_55ptc")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fhu4"]
atlas = ExtResource("3_55ptc")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pirto"]
atlas = ExtResource("4_wtjnl")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1ybb"]
atlas = ExtResource("4_wtjnl")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3wet"]
atlas = ExtResource("4_wtjnl")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0fvr"]
atlas = ExtResource("4_wtjnl")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_omvy6"]
atlas = ExtResource("4_wtjnl")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt7ij"]
atlas = ExtResource("4_wtjnl")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulk4q"]
atlas = ExtResource("6_n26ej")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v523k"]
atlas = ExtResource("6_n26ej")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7lej"]
atlas = ExtResource("6_n26ej")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p843"]
atlas = ExtResource("6_n26ej")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv1o8"]
atlas = ExtResource("5_lrr08")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_enhsk"]
atlas = ExtResource("5_lrr08")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_33pha"]
atlas = ExtResource("5_lrr08")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbvqy"]
atlas = ExtResource("5_lrr08")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxx6q"]
atlas = ExtResource("7_0ry2l")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7w3t"]
atlas = ExtResource("7_0ry2l")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxo68"]
atlas = ExtResource("7_0ry2l")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs8eh"]
atlas = ExtResource("7_0ry2l")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ockrr"]
atlas = ExtResource("8_rn4c5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsoxf"]
atlas = ExtResource("8_rn4c5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1k7p"]
atlas = ExtResource("8_rn4c5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xalur"]
atlas = ExtResource("8_rn4c5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eorto"]
atlas = ExtResource("9_2pu0v")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqrit"]
atlas = ExtResource("9_2pu0v")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4pnv"]
atlas = ExtResource("9_2pu0v")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_77kco"]
atlas = ExtResource("9_2pu0v")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_it3it"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfqcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsm36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h8o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_livdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1x5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4yx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0qe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybcsg")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8byya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dntwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eutql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wldpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idokl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex8fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8gob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fhu4")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pirto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1ybb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3wet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0fvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omvy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt7ij")
}],
"loop": false,
"name": &"attack3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulk4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v523k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7lej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p843")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv1o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enhsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33pha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbvqy")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxx6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7w3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxo68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs8eh")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ockrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsoxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1k7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xalur")
}],
"loop": true,
"name": &"shield",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eorto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqrit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4pnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77kco")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ojch"]
size = Vector2(75, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1cj3"]
size = Vector2(36, 135)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cowe4"]
radius = 21.0
height = 138.0

[sub_resource type="LabelSettings" id="LabelSettings_ifkxm"]
font = ExtResource("17_4oug7")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75vhl"]
bg_color = Color(0.196078, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyofh"]
bg_color = Color(1, 0, 0.0980392, 1)
border_width_top = 2
border_width_bottom = 2
border_color = Color(1, 0, 0.0980392, 1)

[node name="skeleton" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 4
script = ExtResource("1_scjn5")
enemy_name = "Skeleton"
max_health = 10

[node name="sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_it3it")
animation = &"death"
frame = 3

[node name="hurtbox" type="Area2D" parent="."]
script = ExtResource("11_3grk0")
damaged_by_player = true
damaged_by_enemy = false

[node name="shape" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(3.5, 1)
shape = SubResource("RectangleShape2D_1ojch")
debug_color = Color(0.27451, 0.631373, 0, 0.419608)

[node name="attack_hitboxes" type="Node2D" parent="."]

[node name="attack1" type="Area2D" parent="attack_hitboxes"]
collision_layer = 64
collision_mask = 8
monitoring = false
script = ExtResource("10_318o1")
damage = 20

[node name="shape" type="CollisionPolygon2D" parent="attack_hitboxes/attack1"]
scale = Vector2(3, 3)
polygon = PackedVector2Array(1, 8, 15, 14, 36, 16, 51, 15, 65, 8, 73, -1, 73, -9, 69, -17, 49, -26)
disabled = true

[node name="attack2" type="Area2D" parent="attack_hitboxes"]
collision_layer = 64
collision_mask = 8
monitoring = false
script = ExtResource("10_318o1")
damage = 25

[node name="shape" type="CollisionPolygon2D" parent="attack_hitboxes/attack2"]
scale = Vector2(3, 3)
polygon = PackedVector2Array(-16, -36, -10, -46, 3, -56, 19, -61, 37, -61, 49, -57, 60, -50, 70, -38, 73, -27, 73, -15, 71, -8, -8, -27)
disabled = true

[node name="navigation" type="Node2D" parent="."]

[node name="hit_detection" type="Area2D" parent="navigation"]
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="navigation/hit_detection"]
position = Vector2(22, 3)
shape = SubResource("RectangleShape2D_v1cj3")

[node name="ray_cast_for_floor" type="RayCast2D" parent="navigation"]
position = Vector2(44, 61)
target_position = Vector2(0, 29)
collide_with_areas = true

[node name="eyes" type="Marker2D" parent="navigation"]
position = Vector2(29, -57)

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2(4, 3)
shape = SubResource("CapsuleShape2D_cowe4")

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"skeleton": ExtResource("12_jvxvn")
}

[node name="state_machine" type="Node2D" parent="."]
script = ExtResource("14_noadi")

[node name="patrolling_timer" type="Timer" parent="state_machine"]
one_shot = true

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("13_egieu")

[node name="walk" type="Node" parent="state_machine" node_paths=PackedStringArray("_check_for_floor")]
script = ExtResource("15_owcli")
_check_for_floor = NodePath("../../navigation/ray_cast_for_floor")

[node name="hurt" type="Node" parent="state_machine"]
script = ExtResource("14_fhkn0")
metadata/no_turn_on_obstacle = false

[node name="death" type="Node" parent="state_machine"]
script = ExtResource("15_jtmg2")
metadata/no_turn_on_obstacle = false

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource("16_kdtjt")

[node name="watch" type="Node" parent="state_machine" node_paths=PackedStringArray("_obstacle_area", "_check_for_floor")]
script = ExtResource("19_yluc4")
_obstacle_area = NodePath("../../navigation/hit_detection")
_check_for_floor = NodePath("../../navigation/ray_cast_for_floor")

[node name="forget_timer" type="Timer" parent="state_machine/watch"]
wait_time = 4.0
one_shot = true

[node name="attack_pause" type="Timer" parent="state_machine/watch"]
wait_time = 0.25
one_shot = true

[node name="chase" type="Node" parent="state_machine" node_paths=PackedStringArray("_obstacle_area", "_check_for_floor")]
script = ExtResource("21_rov81")
_obstacle_area = NodePath("../../navigation/hit_detection")
_check_for_floor = NodePath("../../navigation/ray_cast_for_floor")
metadata/no_turn_on_obstacle = false

[node name="attack1" type="Node" parent="state_machine"]
script = ExtResource("20_wlf4c")

[node name="attack2" type="Node" parent="state_machine"]
script = ExtResource("21_0wmv4")

[node name="vbox" type="VBoxContainer" parent="."]
z_index = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -96.0
offset_right = 40.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme = ExtResource("16_850ak")
theme_override_constants/separation = 0

[node name="name" type="Label" parent="vbox"]
layout_mode = 2
text = "name"
label_settings = SubResource("LabelSettings_ifkxm")
horizontal_alignment = 1
vertical_alignment = 2

[node name="health" type="ProgressBar" parent="vbox"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_75vhl")
theme_override_styles/fill = SubResource("StyleBoxFlat_eyofh")
max_value = 20.0
value = 10.0
show_percentage = false
script = ExtResource("26_yywjc")

[connection signal="enemy_damaged" from="." to="vbox/health" method="_on_enemy_damaged"]
[connection signal="enemy_died" from="." to="state_machine" method="_on_skeleton_enemy_died"]
[connection signal="enemy_hurt" from="." to="state_machine" method="_on_skeleton_enemy_hurt"]
[connection signal="body_entered" from="navigation/hit_detection" to="state_machine" method="_on_obstacle_detected"]
[connection signal="timeout" from="state_machine/patrolling_timer" to="state_machine" method="_on_patrolling_timer_timeout"]
[connection signal="timeout" from="state_machine/watch/forget_timer" to="state_machine/watch" method="_on_timer_timeout"]
[connection signal="timeout" from="state_machine/watch/attack_pause" to="state_machine/watch" method="_on_attack_pause_timeout"]
